fixing UI Issues

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             molestie, quam in cursus semper, elit erat ullamcorper lectus, non vulputate neque massa eu felis.
           </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" data-aos="zoom-in-up">
           <img class="about-img1 img-responsive" src="include/img/about1.jpg">
           <img class="about-img1 img-responsive" src="include/img/about2.jpg">
         </div>
@@ -591,6 +591,7 @@
 
   <section id="price">
     <h1>price</h1>
+    <div class="line-separator"></div>
     <div class="container vertical-center">
       <div class="row price-chart">
         <div class="card">
