--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
     <div class="container-fluid">
       <div class="row justify-content-between">
         <div class="col-sm-6">
-          <h1>ABOUT US</h1>
+          <h1 data-aos="fade-zoom-in">ABOUT US</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi suscipit tempus eros, sed mattis orci faucibus at.
-            Proin interdum lorem eget orci suscipit cursus. Nunc vehicula cursus suscipit. Nulla ac orci lorem.
-            Nulla aliquam imperdiet augue, sed iaculis enim porttitor quis. Mauris in justo eget urna sodales tincidunt a id ante. Curabitur
+            Proin interdum lorem eget orci suscipit cursus. Nunc vehicula cursus suscipit. Nulla ac orci lorem. Nulla aliquam
+            imperdiet augue, sed iaculis enim porttitor quis. Mauris in justo eget urna sodales tincidunt a id ante. Curabitur
             molestie, quam in cursus semper, elit erat ullamcorper lectus, non vulputate neque massa eu felis.
           </p>
         </div>
@@ -123,10 +123,10 @@
     </div>
     <div class="container-fluid">
       <div class="row about-2">
-        <div class="col-sm-6" data-aos="zoom-in-up">
+        <div class="col-sm-6" data-aos="zoom-in">
           <img class="about-img2 img-responsive" src="include/img/store.jpeg">
         </div>
-        <div class="col-sm-6"  style="background-color: #e0e4e6;">
+        <div class="col-sm-6" style="background-color: #e0e4e6; padding: 20px;">
           <h3>Here Goes Your Sub Title</h3>
           <p>
             Nulla aliquam imperdiet augue, sed iaculis enim porttitor quis. Mauris in justo eget urna sodales tincidunt a id ante. Curabitur
@@ -144,9 +144,9 @@
 
   <!-- Services -->
 
-  <section id="services" style="margin-top: 100px">
+  <section id="services">
     <div class="container-fluid">
-      <h1 class="text-center">Services</h1>
+      <h1 class="text-center" data-aos="fade-zoom-in">Services</h1>
       <div class="line-separator"></div>
       <p class="text-center">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat, odio in pretium efficitur, lorem lectus placerat
@@ -587,77 +587,83 @@
     </div>
   </section>
 
-<!-- Price Section -->
+  <!-- Price Section -->
 
   <section id="price">
-    <h1>price</h1>
+    <h1 data-aos="fade-zoom-in">price</h1>
     <div class="line-separator"></div>
     <div class="container vertical-center">
       <div class="row price-chart">
         <div class="card">
           <h2>Basic</h2>
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-       <g>
-         <g>
-           <path d="M507,1.3c-3.1-1.8-7-1.8-10,0.1L313.7,109.8c-4.8,2.8-6.3,8.9-3.5,13.7c2.8,4.8,8.9,6.3,13.7,3.5l131.5-77.7L210.4,303.3
+            viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+            <g>
+              <g>
+                <path d="M507,1.3c-3.1-1.8-7-1.8-10,0.1L313.7,109.8c-4.8,2.8-6.3,8.9-3.5,13.7c2.8,4.8,8.9,6.3,13.7,3.5l131.5-77.7L210.4,303.3
              L88.6,266.1l159-94c4.8-2.8,6.3-8.9,3.5-13.7c-2.8-4.8-8.9-6.3-13.7-3.5L58.9,260.4c-3.4,2-5.3,5.9-4.8,9.8s3.2,7.2,7,8.4
              l145.5,44.5l64.2,116.8c0.1,0.1,0.1,0.2,0.2,0.3c1.1,1.8,2.7,3.2,4.7,4.1c1.3,0.5,2.6,0.8,3.9,0.8c2.6,0,5.1-1,7-2.8l73.8-72.1
              l138.8,42.5c1,0.3,1.9,0.4,2.9,0.4c2.1,0,4.2-0.7,5.9-2c2.5-1.9,4.1-4.9,4.1-8V10C512,6.4,510.1,3.1,507,1.3z M271.3,329.2
              c-1.2,1.7-1.8,3.7-1.8,5.7v61.2l-43.8-79.8l193.9-201.2L271.3,329.2z M289.5,411.3v-62.9l49,15L289.5,411.3z M492,389.5
-             l-196.5-60.1L492,45.7V389.5z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M164.4,347.6c-3.9-3.9-10.2-3.9-14.1,0l-93.4,93.4c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l93.4-93.4
-             C168.3,357.8,168.3,351.5,164.4,347.6z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M40.1,471.9c-3.9-3.9-10.2-3.9-14.1,0l-23,23c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l23-23
-             C44,482.2,44,475.8,40.1,471.9z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M142.6,494.3c-1.9-1.9-4.4-2.9-7.1-2.9c-2.6,0-5.2,1.1-7.1,2.9s-2.9,4.4-2.9,7.1c0,2.6,1.1,5.2,2.9,7.1
-             c1.9,1.9,4.4,2.9,7.1,2.9s5.2-1.1,7.1-2.9c1.9-1.9,2.9-4.4,2.9-7.1C145.6,498.8,144.5,496.2,142.6,494.3z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M217.1,419.9c-3.9-3.9-10.2-3.9-14.1,0l-49.4,49.4c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l49.4-49.4
-             C221,430.2,221,423.8,217.1,419.9z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M387.7,416.1c-3.9-3.9-10.2-3.9-14.1,0L324,465.7c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l49.6-49.6
-             C391.6,426.4,391.6,420,387.7,416.1z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M283.5,136.3c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2,1.1-7.1,2.9c-1.9,1.9-2.9,4.4-2.9,7.1c0,2.6,1.1,5.2,2.9,7.1
-             c1.9,1.9,4.4,2.9,7.1,2.9s5.2-1.1,7.1-2.9c1.9-1.9,2.9-4.4,2.9-7.1C286.4,140.8,285.4,138.2,283.5,136.3z"/>
-         </g>
-       </g>
-       </svg>
-       
+             l-196.5-60.1L492,45.7V389.5z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M164.4,347.6c-3.9-3.9-10.2-3.9-14.1,0l-93.4,93.4c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l93.4-93.4
+             C168.3,357.8,168.3,351.5,164.4,347.6z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M40.1,471.9c-3.9-3.9-10.2-3.9-14.1,0l-23,23c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l23-23
+             C44,482.2,44,475.8,40.1,471.9z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M142.6,494.3c-1.9-1.9-4.4-2.9-7.1-2.9c-2.6,0-5.2,1.1-7.1,2.9s-2.9,4.4-2.9,7.1c0,2.6,1.1,5.2,2.9,7.1
+             c1.9,1.9,4.4,2.9,7.1,2.9s5.2-1.1,7.1-2.9c1.9-1.9,2.9-4.4,2.9-7.1C145.6,498.8,144.5,496.2,142.6,494.3z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M217.1,419.9c-3.9-3.9-10.2-3.9-14.1,0l-49.4,49.4c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l49.4-49.4
+             C221,430.2,221,423.8,217.1,419.9z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M387.7,416.1c-3.9-3.9-10.2-3.9-14.1,0L324,465.7c-3.9,3.9-3.9,10.2,0,14.1c2,2,4.5,2.9,7.1,2.9s5.1-1,7.1-2.9l49.6-49.6
+             C391.6,426.4,391.6,420,387.7,416.1z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M283.5,136.3c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2,1.1-7.1,2.9c-1.9,1.9-2.9,4.4-2.9,7.1c0,2.6,1.1,5.2,2.9,7.1
+             c1.9,1.9,4.4,2.9,7.1,2.9s5.2-1.1,7.1-2.9c1.9-1.9,2.9-4.4,2.9-7.1C286.4,140.8,285.4,138.2,283.5,136.3z" />
+              </g>
+            </g>
+          </svg>
+
           <p>Proin commodo felis a pharetra placerat.</p>
-          <h3><sup>$</sup><em>70</em><sub>/mo</sub></h3>
-         <button class="buy"><a href="#">Get This</a></button>
+          <h3>
+            <sup>$</sup>
+            <em>70</em>
+            <sub>/mo</sub>
+          </h3>
+          <button class="buy">
+            <a href="#">Get This</a>
+          </button>
         </div>
         <div class="card">
 
           <h2>Advanced</h2>
           <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          viewBox="0 0 372.1 372.1" style="enable-background:new 0 0 372.1 372.1;" xml:space="preserve">
-       <g>
-         <g>
-           <path d="M365.4,35.3c-4.1-2.6-8.7-3.6-14.3-3.1c-9.7,1.5-17.9,5.1-25.6,10.8c-6.7,5.1-14.3,11.3-23,18.4
+            viewBox="0 0 372.1 372.1" style="enable-background:new 0 0 372.1 372.1;" xml:space="preserve">
+            <g>
+              <g>
+                <path d="M365.4,35.3c-4.1-2.6-8.7-3.6-14.3-3.1c-9.7,1.5-17.9,5.1-25.6,10.8c-6.7,5.1-14.3,11.3-23,18.4
              c-4.1,3.6-8.2,7.2-12.3,10.8c-2.6,2.6-5.1,4.6-7.7,7.2c-2.6,2-4.6,3.1-7.7,2.6c-1.5-0.5-3.6-1-5.6-1.5l-95.7-35.8
              c-3.1-1-6.1-2-9.7-3.1c-7.2-2-12.3,0-15.4,2.6c-5.6,4.1-10.2,9.2-13.3,14.8c-3.6,5.6-2.6,11.8,2.6,16.4c2,2,4.1,3.6,5.6,4.6
              c17.4,12.3,35.3,24.1,52.7,36.4c6.7,4.6,12.8,8.7,17.4,14.3c1,1.5,2,2.6,3.1,4.1l-33.3,31.7c-3.6,3.6-7.2,6.7-10.8,10.2
@@ -677,76 +683,81 @@
              c-5.6-6.7-12.3-11.8-19.5-16.4c-17.4-11.8-35.3-24.1-52.7-36.4c-1.5-1-3.1-2-4.6-3.6s-1.5-2-0.5-3.1c2.6-4.6,6.7-8.7,11.3-12.3
              c1-1,2.6-1.5,6.1-0.5s6.7,2,9.2,3.1l95.7,35.8c2.6,1,5.1,1.5,7.2,2c5.6,1,11.3-0.5,15.9-4.6c2.6-2.6,5.1-4.6,7.7-7.2
              c4.1-3.6,8.2-7.2,12.3-10.8c8.7-7.2,15.9-13.3,22.5-18.4c6.1-4.6,13.3-7.7,21-8.7c2.6-0.5,4.6,0,6.7,1
-             C361.3,45,362.4,48.1,361.3,51.2z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M136.1,228.8c-1.5-2-5.1-2.6-7.2-1l-127,96.8c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1L135,236
-             C137.6,234.5,137.6,231.4,136.1,228.8z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M153,252.9c-2-2-5.1-2.6-7.7-1L68,311.3c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1l77.8-59.4
-             C154,258.5,154.5,255,153,252.9z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M61.8,322c-1.5-2-5.1-2.6-7.2-1l-12.8,9.7c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1l12.8-9.7
-             C62.8,327.7,63.4,324.1,61.8,322z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M44.9,264.7c-1.5-2-5.1-2.6-7.2-1L25,273.4c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1l12.8-9.7
-             C45.9,270.3,46.5,266.7,44.9,264.7z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path d="M119.2,208.9c-1.5-2-5.1-2.6-7.2-1l-60.9,46.1c-2,1.5-2.6,5.1-1,7.2c1,1,2.6,2,4.1,2c1,0,2-0.5,3.1-1l60.9-46.1
-             C120.2,214.5,120.7,210.9,119.2,208.9z"/>
-         </g>
-       </g>
-       </svg>
+             C361.3,45,362.4,48.1,361.3,51.2z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M136.1,228.8c-1.5-2-5.1-2.6-7.2-1l-127,96.8c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1L135,236
+             C137.6,234.5,137.6,231.4,136.1,228.8z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M153,252.9c-2-2-5.1-2.6-7.7-1L68,311.3c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1l77.8-59.4
+             C154,258.5,154.5,255,153,252.9z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M61.8,322c-1.5-2-5.1-2.6-7.2-1l-12.8,9.7c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1l12.8-9.7
+             C62.8,327.7,63.4,324.1,61.8,322z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M44.9,264.7c-1.5-2-5.1-2.6-7.2-1L25,273.4c-2,1.5-2.6,5.1-1,7.2c1,1.5,2.6,2,4.1,2c1,0,2-0.5,3.1-1l12.8-9.7
+             C45.9,270.3,46.5,266.7,44.9,264.7z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path d="M119.2,208.9c-1.5-2-5.1-2.6-7.2-1l-60.9,46.1c-2,1.5-2.6,5.1-1,7.2c1,1,2.6,2,4.1,2c1,0,2-0.5,3.1-1l60.9-46.1
+             C120.2,214.5,120.7,210.9,119.2,208.9z" />
+              </g>
+            </g>
+          </svg>
           <p>Proin commodo felis a pharetra placerat.</p>
-          <h3><sup>$</sup><em>100</em><sub>/mo</sub></h3>
-          <button class="buy"><a href="#">Get This</a></button>
+          <h3>
+            <sup>$</sup>
+            <em>100</em>
+            <sub>/mo</sub>
+          </h3>
+          <button class="buy">
+            <a href="#">Get This</a>
+          </button>
         </div>
 
         <div class="card">
           <h2>Premium</h2>
-          <svg x="0px" y="0px"
-          viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-       <g>
-         <g>
-           <path class="st0 dashed" d="M75.3,368.3c-2.9-2.9-7.7-2.9-10.6,0l-25.5,25.5c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
-             C78.2,376,78.2,371.3,75.3,368.3z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path class="st0 dashed" d="M100.1,393.1c-2.9-2.9-7.7-2.9-10.6,0L64,418.6c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
-             C103,400.8,103,396.1,100.1,393.1z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path class="st0 dashed" d="M149.7,442.8c-2.9-2.9-7.7-2.9-10.6,0l-25.5,25.5c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
-             C152.6,450.4,152.6,445.7,149.7,442.8z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path class="st0" d="M124.9,417.9c-2.9-2.9-7.7-2.9-10.6,0l-25.5,25.5c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
-             C127.8,425.6,127.8,420.9,124.9,417.9z"/>
-         </g>
-       </g>
-       <g>
-         <g>
-           <path class="st0" d="M493.3,0.6c-32.6,9.5-126,36.8-157,45.9c-1.2,0.4-2.3,1-3.2,1.9L228.3,153.3l-46.9,3.9
+          <svg x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+            <g>
+              <g>
+                <path class="st0 dashed" d="M75.3,368.3c-2.9-2.9-7.7-2.9-10.6,0l-25.5,25.5c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
+             C78.2,376,78.2,371.3,75.3,368.3z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path class="st0 dashed" d="M100.1,393.1c-2.9-2.9-7.7-2.9-10.6,0L64,418.6c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
+             C103,400.8,103,396.1,100.1,393.1z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path class="st0 dashed" d="M149.7,442.8c-2.9-2.9-7.7-2.9-10.6,0l-25.5,25.5c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
+             C152.6,450.4,152.6,445.7,149.7,442.8z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path class="st0" d="M124.9,417.9c-2.9-2.9-7.7-2.9-10.6,0l-25.5,25.5c-2.9,2.9-2.9,7.7,0,10.6c2.9,2.9,7.7,2.9,10.6,0l25.5-25.5
+             C127.8,425.6,127.8,420.9,124.9,417.9z" />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path class="st0" d="M493.3,0.6c-32.6,9.5-126,36.8-157,45.9c-1.2,0.4-2.3,1-3.2,1.9L228.3,153.3l-46.9,3.9
              c-66.6,5.6-129.3,34.7-176.5,82c-9.9,9.9-3.7,27,10.3,28.2l91.1,8l-9.4,9.4c-5.9,5.9-5.9,15.3,0,21.2l9.1,9.1l-18.5,18.5
              c-7.2,7.2-7.2,19,0,26.2c7.9,7.9,56.9,56.9,64.8,64.8c7.2,7.2,19,7.2,26.2,0l18.5-18.5l8.6,8.6c6.1,6.1,16.1,6.1,22.2,0l8.9-8.9
              l8,91.1c0.6,6.5,4.7,11.9,10.8,14.1c6.1,2.2,12.8,0.8,17.4-3.8c29.1-29.1,51.1-63.4,65.3-102c1.4-3.9-0.5-8.2-4.4-9.6
@@ -761,20 +772,27 @@
              C217.1,404.1,217.1,404.2,217.1,404.1c-0.3,0.3-0.7,0.2-1,0c-4.5-4.5-35.7-35.7-40.4-40.4l15.5-15.5l40.9,40.9L217.1,404.1z
               M451.7,169.6c-9.9,9.9-200.1,200.1-208.9,208.9l-40.9-40.9l95.3-95.3c6.9-6.9,8.2-18.6-0.7-27.5c-7.4-7.4-19.4-7.4-26.8,0
              l-95.3,95.3l-40.9-40.9c8.3-8.3,199.2-199.2,208.9-208.9l65.1-19l63.1,63.1L451.7,169.6z M475.5,88L424,36.5l72.8-21.3L475.5,88z"
-             />
-         </g>
-       </g>
-       <g>
-         <g>
-           <path class="st0" d="M381.9,130.1c-4.3-4.3-9.3-7.7-14.8-10.2c-3.8-1.7-8.2,0-9.9,3.7s0,8.2,3.7,9.9
+                />
+              </g>
+            </g>
+            <g>
+              <g>
+                <path class="st0" d="M381.9,130.1c-4.3-4.3-9.3-7.7-14.8-10.2c-3.8-1.7-8.2,0-9.9,3.7s0,8.2,3.7,9.9
              c22.3,10.1,27.6,39.4,10.3,56.6c-13.6,13.6-35.8,13.6-49.5,0c-17.2-17.2-12-46.5,10.3-56.6c3.8-1.7,5.5-6.1,3.7-9.9
-             c-1.7-3.8-6.1-5.5-9.9-3.7c-31.8,14.4-39.4,56.2-14.8,80.9c9.7,9.7,22.5,14.6,35.3,14.6C391,215.4,413.3,161.5,381.9,130.1z"/>
-         </g>
-       </g>
-       </svg>
+             c-1.7-3.8-6.1-5.5-9.9-3.7c-31.8,14.4-39.4,56.2-14.8,80.9c9.7,9.7,22.5,14.6,35.3,14.6C391,215.4,413.3,161.5,381.9,130.1z"
+                />
+              </g>
+            </g>
+          </svg>
           <p>Proin commodo felis a pharetra placerat.</p>
-          <h3><sup>$</sup><em>150</em><sub>/mo</sub></h3>
-          <button class="buy"><a href="#">Get This</a></button>
+          <h3>
+            <sup>$</sup>
+            <em>150</em>
+            <sub>/mo</sub>
+          </h3>
+          <button class="buy">
+            <a href="#">Get This</a>
+          </button>
         </div>
       </div>
     </div>
@@ -784,33 +802,36 @@
   <!-- contact us section -->
 
   <section id="contact">
-      <div class="container">
-        <div class="row">
-          <form action="/action_page.php" style="margin: 0 auto;">
-            <div class="name">
-              <label for="email">Email address:</label>
-              <input type="email" class="form-control" id="email">
-            </div>
-            
-            <div class="password">
-              <label for="pwd">Password:</label>
-              <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="subject">
-              <label for="txt">Password:</label>
-              <input type="password" class="form-control" id="pwd">
-            </div>
-            <div class="message">
-              <label for="text">Password:</label>
-              <input type="text" class="form-control" id="pwd">
-            </div>
-            <div class="checkbox">
-              <label><input type="checkbox"> Remember me</label>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-        </div>
-        </div>
+    <div class="container">
+      <h1 class="text-center" data-aos="fade-zoom-in">get in touch</h1>
+      <div class="line-separator"></div>
+      <div class="row">
+        <form action="/action_page.php" style="margin: 0 auto;">
+          <div class="name">
+            <label for="email">Email address:</label>
+            <input type="email" class="form-control" id="email">
+          </div>
+
+          <div class="password">
+            <label for="pwd">Password:</label>
+            <input type="password" class="form-control" id="pwd">
+          </div>
+          <div class="subject">
+            <label for="txt">Password:</label>
+            <input type="password" class="form-control" id="pwd">
+          </div>
+          <div class="message">
+            <label for="text">Password:</label>
+            <input type="text" class="form-control" id="pwd">
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> Remember me</label>
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </div>
+    </div>
   </section>
 
 
