fixing W3 Validating Error

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poor+Story" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Hind+Siliguri" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300" />
 
     <!-- fontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -117,7 +117,7 @@
 
 
     <!-- SVG Morphing and Animejs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
 
     <script>
         var morphing = anime({
@@ -153,10 +153,10 @@
                 </div>
                 <div class="col-sm-6" data-aos="zoom-in-up">
                     <div class="col-sm">
-                        <img class="about-img1 img-responsive" src="include/img/about1.jpg">
+                        <img class="about-img1 img-responsive" src="include/img/about1.jpg" alt="from office">
                     </div>
                     <div class="col-sm">
-                        <img class="about-img1 img-responsive" src="include/img/about2.jpg">
+                        <img class="about-img1 img-responsive" src="include/img/about2.jpg" alt="from office">
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
         <div class="container-fluid">
             <div class="row about-2">
                 <div class="col-sm-6" data-aos="zoom-in">
-                    <img class="about-img2 img-responsive" src="include/img/store.jpeg">
+                    <img class="about-img2 img-responsive" src="include/img/store.jpeg" alt="office">
                 </div>
                 <div class="col-sm-6" style="background-color: #e0e4e6; padding: 20px;">
                     <h3>Here Goes Your Sub Title</h3>
@@ -189,22 +189,22 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm">
-                            <img class="service-icon" src="include/img/services-icon/051-computer-4.png" data-tilt>
+                            <img class="service-icon" src="include/img/services-icon/051-computer-4.png" data-tilt alt="services">
                             <h6 class="cool-link">GRAPHIC DESIGNING</h6>
-                            <img class="service-icon" src="include/img/services-icon/051-analytics-1.png" data-tilt>
+                            <img class="service-icon" src="include/img/services-icon/051-analytics-1.png" data-tilt alt="services">
                             <h6 class="cool-link">BRANDING & IDENTITY</h6>
-                            <img class="service-icon" src="include/img/services-icon/051-browser-1.png" data-tilt>
+                            <img class="service-icon" src="include/img/services-icon/051-browser-1.png" data-tilt alt="services">
                             <h6 class="cool-link">SEARCH ENGINE OPTIMIZATION</h6>
                         </div>
                         <div class="col-5">
-                            <img class="middle" src="include/img/laptop-desk-website-work.jpg" data-aos="fade-zoom-in">
+                            <img class="middle" src="include/img/laptop-desk-website-work.jpg" data-aos="fade-zoom-in" alt="services">
                         </div>
                         <div class="col-sm">
-                            <img class="service-icon" src="include/img/services-icon/051-megaphone.png" data-tilt>
+                            <img class="service-icon" src="include/img/services-icon/051-megaphone.png" data-tilt alt="services">
                             <h6 class="cool-link">SOCIAL MEDIA MARKETING</h6>
-                            <img class="service-icon" src="include/img/services-icon/051-world-map-1.png" data-tilt>
+                            <img class="service-icon" src="include/img/services-icon/051-world-map-1.png" data-tilt alt="services">
                             <h6 class="cool-link">SMS & EMAIL MARKETING</h6>
-                            <img class="service-icon" src="include/img/services-icon/051-responsive.png" data-tilt>
+                            <img class="service-icon" src="include/img/services-icon/051-responsive.png" data-tilt alt="services">
                             <h6 class="cool-link">WEB DESIGN & DEVELOPMENT</h6>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                     <div class="col-sm-4 all agency">
                         <div class="work">
                             <a href="#">
-                                <img src="include/img/work/dining-drink-food-1126728.jpg">
+                                <img src="include/img/work/dining-drink-food-1126728.jpg" alt="work 1">
                             </a>
                         </div>
                     </div>
@@ -246,21 +246,21 @@
                     <div class="col-sm-4 all agency corporate">
                         <div class="work">
                             <a href="#">
-                                <img src="include/img/work/blur-close-up-dairy-product-380954.jpg">
+                                <img src="include/img/work/blur-close-up-dairy-product-380954.jpg" alt="work 2">
                             </a>
                         </div>
                     </div>
                     <div class="col-sm-4 all agency portal">
                         <div class="work">
                             <a href="#">
-                                <img src="include/img/work/blur-chilled-chocolate-919273.jpg">
+                                <img src="include/img/work/blur-chilled-chocolate-919273.jpg" alt="work 3">
                             </a>
                         </div>
                     </div>
                     <div class="col-sm-4 all personal">
                         <div class="work">
                             <a href="#">
-                                <img src="include/img/work/black-coffee-breakfast-cake-709833.jpg">
+                                <img src="include/img/work/black-coffee-breakfast-cake-709833.jpg" alt="work 4">
                             </a>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                     <div class="col-sm-4 all agency corporate  portal">
                         <div class="work">
                             <a href="#">
-                                <img class="zoom" src="include/img/work/cones-food-food-photography-787666.jpg">
+                                <img class="zoom" src="include/img/work/cones-food-food-photography-787666.jpg " alt="work 5">
                             </a>
                         </div>
                     </div>
@@ -498,7 +498,7 @@
                 <div class="row try-it">
                     <div class="col-sm-6">
                         <div class="contact1-pic js-tilt" data-tilt>
-                            <img class="img-responsive" src="include/img/img-01.png">
+                            <img class="img-responsive" src="include/img/img-01.png" alt="contact us">
                         </div>
                     </div>
                     <div class="col-sm-6">
@@ -539,7 +539,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-3">
-                    <img src="include/img/Logo_TV_2015.png">
+                    <img src="include/img/Logo_TV_2015.png" alt="Social Elite">
                 </div>
                 <div class="col-sm-3">
                     <p>Unit 220, 2nd Floor
