fixing W3 Validating Error

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="row price-chart">
                 <div class="card" data-tilt>
                     <h2>Basic</h2>
-                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                         <g>
                             <g>
                                 <path d="M507,1.3c-3.1-1.8-7-1.8-10,0.1L313.7,109.8c-4.8,2.8-6.3,8.9-3.5,13.7c2.8,4.8,8.9,6.3,13.7,3.5l131.5-77.7L210.4,303.3
@@ -348,7 +348,7 @@
                 <div class="card" data-tilt>
 
                     <h2>Advanced</h2>
-                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372.1 372.1" style="enable-background:new 0 0 372.1 372.1;" xml:space="preserve">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 372.1 372.1" style="enable-background:new 0 0 372.1 372.1;" xml:space="preserve">
                         <g>
                             <g>
                                 <path d="M365.4,35.3c-4.1-2.6-8.7-3.6-14.3-3.1c-9.7,1.5-17.9,5.1-25.6,10.8c-6.7,5.1-14.3,11.3-23,18.4
@@ -508,10 +508,10 @@
                             </div>
 
                             <div class="wrap-input1 validate-input">
-                                <input type="email" class="form-control input1" id="pwd" placeholder="Email">
+                                <input type="email" class="form-control input1" placeholder="Email">
                             </div>
                             <div class="subject wrap-input1 validate-input">
-                                <input type="txt" class="form-control input1" id="pwd" placeholder="Subject">
+                                <input type="txt" class="form-control input1" placeholder="Subject">
                             </div>
                             <div class="wrap-input1 validate-input">
                                 <textarea class="input1" name="message" placeholder="Message"></textarea>
