fixing W3 Validating Error

--- a/index.html
+++ b/index.html
@@ -504,14 +504,14 @@
                     <div class="col-sm-6">
                         <form action="/action_page.php" style="margin: 0 auto;">
                             <div class="wrap-input1 validate-input">
-                                <input type="txt" class="form-control input1" id="email" placeholder="Name">
+                                <input class="form-control input1" id="email" placeholder="Name">
                             </div>
 
                             <div class="wrap-input1 validate-input">
                                 <input type="email" class="form-control input1" placeholder="Email">
                             </div>
                             <div class="subject wrap-input1 validate-input">
-                                <input type="txt" class="form-control input1" placeholder="Subject">
+                                <input class="form-control input1" placeholder="Subject">
                             </div>
                             <div class="wrap-input1 validate-input">
                                 <textarea class="input1" name="message" placeholder="Message"></textarea>
